Implement department creation
